--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -15,12 +15,13 @@ jobs:
       - run: npm run build
       - run: npm test
 
-  deploy:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v2
-      - uses: akhileshns/heroku-deploy@v3.12.12 # This is the action
-        with:
-          heroku_api_key: ${{secrets.HEROKU_SECRET}}
-          heroku_app_name: "esgi-joke-app" #Must be unique in Heroku
-          heroku_email: "jeremdh.dev@outlook.com"
+# deploy heroku app
+  #deploy:
+  #  runs-on: ubuntu-latest
+  #  steps:
+  #    - uses: actions/checkout@v2
+  #    - uses: akhileshns/heroku-deploy@v3.12.12 # This is the action
+  #      with:
+  #        heroku_api_key: ${{secrets.HEROKU_SECRET}}
+  #        heroku_app_name: "esgi-joke-app" #Must be unique in Heroku
+  #        heroku_email: "jeremdh.dev@outlook.com"
