modify config circle

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,1 +1,10 @@
 version: 2.1
+
+jobs:
+  build-test:
+    docker:
+      - image: circleci/node:16.17.0
+    steps:
+      - checkout
+      - run: npm install
+      - run: npm test
