--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,9 +1,15 @@
 version: 2.1
 
+workflows:
+  build-test:
+    filters:
+      branches:
+        only:
+          - circle_ci_jerem
 jobs:
   build-test:
     docker:
-      - image: circleci/node:16.17.0
+      - image: cimg/node:16.17.0
     steps:
       - checkout
       - run: npm install
