--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,6 +8,7 @@ workflows:
             branches:
               only:
                 - circle_ci_jerem
+jobs:
   build-test:
     docker:
       - image: cimg/node:16.17.0
