--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -21,13 +21,11 @@ workflows:
             branches:
               only:
                 - circle_ci_jerem
-  
-  deploy:
-    jobs:
+                
       - heroku/deploy-via-git:
           requires:
-            - node/run
-            - node/test
+            - "node/run"
+            - "node/test"
           app-name: "esgi-joke-app"
           filters:
             branches:
